# stocktest

./: .gitignore  README.md  WORKFLOW.md  alembic.ini  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: cb321cf565bf_initial_schema.py  cd28a230bca8_add_company_name_to_securities.py  d1e2f3a4b5c6_add_no_data_ranges.py
config/: default.yaml  vanguard_defensive.yaml
docs/: todo.md
src/stocktest/: __init__.py  cli.py  config.py  config_test.py  integration_test.py  logging.py
src/stocktest/analysis/: __init__.py  metrics.py  metrics_test.py  reporting.py  reporting_test.py
src/stocktest/backtest/: __init__.py  engine.py  engine_test.py
src/stocktest/data/: __init__.py  cache.py  cache_test.py  company_info.py  company_info_test.py  database.py  database_test.py  fetcher.py  fetcher_test.py  models.py
src/stocktest/visualization/: __init__.py  charts.py  charts_test.py  interactive_charts.py  interactive_charts_test.py
